fix: section overlapping on height reduction

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,31 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  height: 100%;
   transition: background-color 0.3s, color 0.3s;
 }
+
+.section-container {
+  min-height: 100vh;
+  min-width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-items: center;
+  align-items: center;
+
+  padding: 5rem 9% 2rem;
+  margin-bottom: 5rem;
+
+  transition-property: color;
+  transition-duration: 300ms;
+}
+
+.secondary-color{
+  background: var(--secondary-color);
+}
+
 
 /* Hire me button from Home page*/
 .btn-type1 {
