--- a/src/pages/Home/Homepage.css
+++ b/src/pages/Home/Homepage.css
@@ -1,106 +1,89 @@
 /* -------------------------Home page Section-------------------------*/
-.section-container {
-    height: 100vh;
-    width: 100vw;
-  
-    display: flex;
-    flex-direction: column;
-  
-    justify-items: center;
-    align-items: center;
-  
-    padding: 5rem 9% 2rem;
-  
-    transition-property: color;
-    transition-duration: 300ms;
-  }
-  
-  .secondary-color{
-    background: var(--secondary-color);
-  }
-  
-  .intro-tag {
-    display: inline-block;
-    transition: .3s;
-    opacity: 0;
-    animation: slideRight 1.5s ease forwards;
-    animation-delay: .3s;
-  }
-  
-  .name-tag {
-    display: inline-block;
-    opacity: 0;
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    animation: slideBottom 1.5s ease forwards;
-    animation-delay: .3s;
-  }
-  
-  .gradient-text {
-    background: var(--animated-gradient);
-    background-size: 400%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    animation: gradient-animation 15s ease infinite;
-  }
-  
-  .designation-tag {
-    transition: .3s;
-    opacity: 0;
-    animation: slideLeft 1.5s ease forwards;
-    animation-delay: .3s;
-  }
-  
-  
-  /* -----------------------------Social media logos-----------------------------*/
-  .btn-container {
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    background-color: transparent;
-    height: 100px;
-    width: 300px;
-    position:absolute;
-  }
-  
-  /* Link styling */
-  .social-link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 10px;
-    padding: 0.1rem;
-    height: 40px;
-    width: 40px;
-    background-color: var(--bg-color);
-    border: 1px solid #00abf0;
-    border-radius: 50px;
-    transition: box-shadow 0.3s ease;
-  }
-  
-  .social-link:hover {
-    background-color: #00abf0;
-    box-shadow: 0 0 15px #00abf0;
-  }
-  
-  /* Image styling */
-  .social-icon {
-    width: 2.5rem;
-    fill: var(--text-color);
-  }
-  .menuIcon{
-    fill: var(--text-color)
-  }
-  
-  .profile-photo{
-    border-radius: 50px;
-    transition: box-shadow 2s ease;
-  }
-  .profile-photo:hover{
-    background-color: #00abf0;
-    box-shadow: 0 0 50px #00abf0;
-  }
+
+.intro-tag {
+  display: inline-block;
+  transition: .3s;
+  opacity: 0;
+  animation: slideRight 1.5s ease forwards;
+  animation-delay: .3s;
+}
+
+.name-tag {
+  display: inline-block;
+  opacity: 0;
+  background: var(--gradient-color);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  animation: slideBottom 1.5s ease forwards;
+  animation-delay: .3s;
+}
+
+.gradient-text {
+  background: var(--animated-gradient);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  animation: gradient-animation 15s ease infinite;
+}
+
+.designation-tag {
+  transition: .3s;
+  opacity: 0;
+  animation: slideLeft 1.5s ease forwards;
+  animation-delay: .3s;
+}
+
+
+/* -----------------------------Social media logos-----------------------------*/
+.btn-container {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  background-color: transparent;
+  height: 100px;
+  width: 300px;
+  position: absolute;
+}
+
+/* Link styling */
+.social-link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  padding: 0.1rem;
+  height: 40px;
+  width: 40px;
+  background-color: var(--bg-color);
+  border: 1px solid #00abf0;
+  border-radius: 50px;
+  transition: box-shadow 0.3s ease;
+}
+
+.social-link:hover {
+  background-color: #00abf0;
+  box-shadow: 0 0 15px #00abf0;
+}
+
+/* Image styling */
+.social-icon {
+  width: 2.5rem;
+  fill: var(--text-color);
+}
+
+.menuIcon {
+  fill: var(--text-color)
+}
+
+.profile-photo {
+  border-radius: 50px;
+  transition: box-shadow 2s ease;
+}
+
+.profile-photo:hover {
+  background-color: #00abf0;
+  box-shadow: 0 0 50px #00abf0;
+}
